--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   'GET',
   {"fields":"images"},
   function(response) {
-      document.getElementById('image').innerHTML = response.source;
+      document.getElementById('image').innerHTML = response.name;
   }
 );
   }
