--- a/index.html
+++ b/index.html
@@ -88,8 +88,15 @@
   'GET',
   {"fields":"images"},
   function(response) {
-    console.log(response.data[0].images[0].source);
-      document.getElementById('image').innerHTML = response.data[0].images[0].source;
+    for(var data in response) {
+      for(var image in data) {
+        console.log(response.data.images.source);
+        document.getElementById('image').innerHTML = '<img src=' + response.data.images.source + '/>';
+        
+      }
+    }
+    //console.log(response.data[0].images[0].source);
+    //document.getElementById('image').innerHTML = response.data[0].images[0].source;
   }
 );
   }
