--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
   function(response) {
     for(var data in response) {
       for(var image in data) {
+        console.log('Hello');
         console.log(response.data.images.source);
         document.getElementById('image').innerHTML = '<img src=' + response.data.images.source + '/>';
         
