--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
   'GET',
   {"fields":"images"},
   function(response) {
+    console.log('Hello');
     for(var data in response) {
       for(var image in data) {
         console.log('Hello');
