--- a/index.html
+++ b/index.html
@@ -89,11 +89,16 @@
   {"fields":"images"},
   function(response) {
     console.log('Hello');
+    for(var resp in response) {
+      var img = JSON.parse(resp.images);
+      console.log(img.source);
+      document.getElementById('image').innerHTML = '<img src=' + img.source + '/>';
+    }
     for(var data in response) {
       for(var image in data) {
-        console.log('Hello');
-        console.log(response.data.images.source);
-        document.getElementById('image').innerHTML = '<img src=' + response.data.images.source + '/>';
+        //console.log('Hello');
+        //console.log(response.data.images.source);
+        /document.getElementById('image').innerHTML = '<img src=' + response.data.images.source + '/>';
         
       }
     }
