--- a/index.html
+++ b/index.html
@@ -91,12 +91,11 @@
     console.log('Hello');
     console.log(response.data[0].images[0].source);
     document.getElementById('image').innerHTML = '<img src=' + response.data[0].images[0].source + '/>';
-    for(var resp in response) {
-      
-      var img = JSON.parse(resp.images);
-      console.log(img.source);
-      document.getElementById('image').innerHTML = '<img src=' + img.source + '/>';
-    }
+    //for(var resp in response) {
+    //  var img = JSON.parse(resp.images);
+    //  console.log(img.source);
+    //  document.getElementById('image').innerHTML = '<img src=' + img.source + '/>';
+    //}
     for(var data in response) {
       for(var image in data) {
         //console.log('Hello');
