--- a/results.html
+++ b/results.html
@@ -1,20 +1,411 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Top Events for Russell</h2>
 <center>
-<h2>Adeles concert</h2>
-<img src=https://pbs.twimg.com/profile_images/657199367556866048/EBEIl2ol.jpg/>
-<br>
-<a href=ticketmaster.com>Adeles concert</a>
+<a href=ticketmaster.comh</a>
 </center>
 <br>
 <br>
 <br>
 <center>
-<h2>Adeles concert</h2>
-<img src=https://pbs.twimg.com/profile_images/657199367556866048/EBEIl2ol.jpg/>
+<a href=ticketmaster.comt</a>
+</center>
 <br>
-<a href=ticketmaster.com>Adeles concert</a>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comt</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comp</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.coms</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com:</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com/</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com/</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comp</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comb</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.coms</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com.</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comt</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comw</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comi</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comm</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comg</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com.</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comc</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.como</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comm</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com/</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comp</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comr</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.como</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comf</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comi</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.coml</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.come</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com_</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comi</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comm</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.coma</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comg</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.come</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.coms</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com/</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com6</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com5</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com7</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com1</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com9</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com9</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com3</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com6</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com7</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com5</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com5</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com6</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com8</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com6</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com6</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com0</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com4</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com8</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com/</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comE</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comB</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comE</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comI</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.coml</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com2</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.como</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.coml</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.com.</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comj</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comp</a>
+</center>
+<br>
+<br>
+<br>
+<center>
+<a href=ticketmaster.comg</a>
 </center>
 <br>
 <br>
