Connected all 3 modules each person made

--- a/results.html
+++ b/results.html
@@ -3,409 +3,15 @@
 <body>
 <h2>Top Events for Russell</h2>
 <center>
-<a href=ticketmaster.comh</a>
+<a href=ticketmaster.com/dam/a/5f7/af624549-234b-4807-a647-9e245543f5f7_37701_EVENT_DETAIL_PAGE_16_9.jpg
+>View on ticketmaster!</a>
 </center>
 <br>
 <br>
 <br>
 <center>
-<a href=ticketmaster.comt</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comt</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comp</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.coms</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com:</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com/</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com/</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comp</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comb</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.coms</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com.</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comt</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comw</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comi</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comm</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comg</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com.</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comc</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.como</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comm</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com/</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comp</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comr</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.como</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comf</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comi</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.coml</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.come</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com_</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comi</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comm</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.coma</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comg</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.come</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.coms</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com/</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com6</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com5</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com7</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com1</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com9</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com9</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com3</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com6</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com7</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com5</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com5</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com6</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com8</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com6</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com6</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com0</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com4</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com8</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com/</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comE</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comB</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comE</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comI</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.coml</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com2</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.como</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.coml</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.com.</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comj</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comp</a>
-</center>
-<br>
-<br>
-<br>
-<center>
-<a href=ticketmaster.comg</a>
+<a href=ticketmaster.com/Long-Beach-Symphony-Pops-tickets/artist/1364005
+>View on ticketmaster!</a>
 </center>
 <br>
 <br>
